--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <main>
     <h2>Hello!</h2>
-    <p>This is my free HTML website. I built it myself!</p>
+    <p>the dark is only temporary, the obscenities will be revealed!</p>
 </main>
 
 <footer>
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
