--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
 <header>
-    <h1>Welcome to My Website</h1>
+    <h1>WHERE THE NIGHT CLASHES</h1>
 </header>
 
 <main>
@@ -42,9 +42,10 @@
 </main>
 
 <footer>
-    <p>© 2025 My Website</p>
+    <p>© 2025</p>
 </footer>
 
 </body>
 </html>
+
 
