--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: #f2f2f2;
+            background: red; /* Page background is red */
         }
         header {
             background: #4a90e2;
@@ -21,7 +21,8 @@
             padding: 20px;
             max-width: 800px;
             margin: auto;
-            background: white;
+            background: yellow; /* Main content background is yellow */
+            color: blue; /* Main content text color is blue */
         }
         footer {
             text-align: center;
@@ -47,5 +48,3 @@
 
 </body>
 </html>
-
-
