--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
 
 <main>
-    <h2>Hello!</h2>
+    <h2>Why are you here? where the reality you know begins to fragment!</h2>
     <p>the dark is only temporary, the obscenities will be revealed!</p>
 </main>
 
@@ -48,3 +48,4 @@
 
 </body>
 </html>
+
