--- a/index.html
+++ b/index.html
@@ -23,11 +23,19 @@
             margin: auto;
             background: yellow; /* Main content background is yellow */
             color: blue; /* Main content text color is blue */
+            text-align: center; /* Center content */
         }
         footer {
             text-align: center;
             padding: 10px;
             color: #666;
+        }
+        img {
+            max-width: 100%; /* Make image responsive */
+            height: auto;
+            margin-top: 20px;
+            border: 3px solid blue; /* Optional: adds border */
+            border-radius: 10px; /* Optional: rounded corners */
         }
     </style>
 </head>
@@ -38,8 +46,9 @@
 </header>
 
 <main>
-    <h2>Why are you here? where the reality you know begins to fragment!</h2>
+    <h2>Hello!</h2>
     <p>the dark is only temporary, the obscenities will be revealed!</p>
+    <img src="images/myimage.jpg" alt="My Image">
 </main>
 
 <footer>
